# MacSim

./: .gitignore  .gitpod.yml  README.md  TODO.md  docker-compose.yml
.github/workflows/: docker-image.yml
catkin_ws/: readme.md
catkin_ws/src/demo/: CMakeLists.txt  package.xml
catkin_ws/src/demo/scripts/: talker.py
dockerfiles/python-rospylib/: Dockerfile
dockerfiles/ros-extended/: Dockerfile
images/base/: Dockerfile  Dockerfile.old
images/base/html/: api.js  hud-min.html  hud.html  landing.html  server.py  style-min.css  (+1 more)
images/dockwater-arm64/: Dockerfile
images/logic_haskell/: Dockerfile
images/logic_ocaml/: Dockerfile
images/logic_python/: Dockerfile  talker.py
images/master/: Dockerfile
images/node/: Dockerfile
images/python-rospylib/: Dockerfile  talker.py
images/ros-extended/: Dockerfile  listener.py
images/sim/: Dockerfile
images/submission/: Dockerfile  ros_entrypoint.sh  run_my_system.bash
local_programs/coq_proofs/: .ThrusterAllocation.aux  ThrusterAllocation.glob  ThrusterAllocation.hs  ThrusterAllocation.v
local_programs/coq_thruster_allocation/: ThrusterAllocation.v
local_programs/haskell_coq_extraction/: ws_client.hs
local_programs/js_experiments/: api.js  main_via_api.js
local_programs/node/: Api.js  Main.js  package.json
local_programs/node_demo/: api.js  demo.js  package.json
local_programs/program_encoder/: Basic.js  Main.js
local_programs/scala_view/: build.gradle  build.sbt  settings.gradle
local_programs/standalone_ml5/: index.html  sketch.js
local_programs/web_view/: index.html  sims.html
(+49 files in other folders)
